maze.lessons.maze.island.IslandMaze.scala.error
Escaper:33: error: Unmatched closing brace '}' ignored here
}
^